classDiagram
    %% PawPal+ class diagram — keep this updated as your implementation evolves.

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class Owner {
        +str name
        +int available_minutes
        +list~str~ preferences
        +list~Pet~ pets
        +add_pet(pet) void
        +remove_pet(pet) void
        +generate_schedule(day) Schedule
    }

    class Pet {
        +str name
        +str species
        +str breed
        +int age
        +list~Task~ tasks
        +add_task(task) void
        +remove_task(task) void
    }

    class Task {
        +str name
        +int duration
        +Priority priority
        +bool recurring
        +str frequency
        +fits_within(minutes) bool
    }

    class PlannedItem {
        +Pet pet
        +Task task
        +time start_time
    }

    class Schedule {
        +Owner owner
        +date day
        +list~PlannedItem~ planned_items
        +int total_minutes
        +str explanation
        +generate() list~PlannedItem~
        -sort_by_priority(tasks) list~Task~
        +explain() str
    }

    Owner "1" --> "*" Pet : owns
    Pet "1" --> "*" Task : has
    Owner "1" --> "1" Schedule : generates
    Schedule "1" --> "*" PlannedItem : plans
    PlannedItem --> Pet : for
    PlannedItem --> Task : schedules
    Task --> Priority : ranked by
